[UPGRADE] Setup first container

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shoes</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- 1° CONTAINER  -->
+    <div class="container">
+        <div class="layout">
+            <div class="content">
+                <img src="" alt="">
+                <h2></h2>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
