[UPGRADE] Ended first section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <!-- 1° CONTAINER  -->
-    <div class="container">
+    <div class="container bg_red">
         <div class="layout">
-            <div class="content">
-                <img src="" alt="">
-                <h2></h2>
+            <div class="content text-yellow">
+                <img src="./img/01.png" alt="shoes">
+                <h2>IL NOSTRO MODELLO DI PUNTA</h2>
             </div>
         </div>
     </div>
