[FINAL PROJECT] ended containers, leave .layout

--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 <body>
     <!-- 1° CONTAINER  -->
     <div class="container bg_red">
-        <div class="layout">
-            <div class="content text-yellow">
-                <img src="./img/01.png" alt="shoes">
-                <h2>IL NOSTRO MODELLO DI PUNTA</h2>
-            </div>
+        <div class="content text-yellow">
+            <img src="./img/01.png" alt="shoes">
+            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+        </div>
+    </div>
+    <!-- 2° CONTAINER  -->
+    <div class="container bg_green">
+        <div class="content text-yellow">
+            <img src="./img/02.png" alt="shoes">
+            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+        </div>
+    </div>
+    <!-- 3° CONTAINER  -->
+    <div class="container bg_yellow">
+        <div class="content text-green">
+            <img src="./img/03.png" alt="shoes">
+            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
         </div>
     </div>
 </body>
