--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik+Mono+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 1° CONTAINER  -->
-    <div class="container bg_red">
-        <div class="content text-yellow">
-            <img src="./img/01.png" alt="shoes">
-            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+
+    <!-- MAIN  -->
+    <main>
+        <div class="menu">
+            <span><a href="#red">1</a></span>
+            <span><a href="#green">2</a></span>
+            <span><a href="#yellow">3</a></span>
         </div>
-    </div>
-    <!-- 2° CONTAINER  -->
-    <div class="container bg_green">
-        <div class="content text-yellow">
-            <img src="./img/02.png" alt="shoes">
-            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+        <!-- 1° CONTAINER  -->
+        <div id="red" class="container bg_red">
+            <div class="content text-yellow">
+                <img src="./img/01.png" alt="shoes">
+                <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+            </div>
         </div>
-    </div>
-    <!-- 3° CONTAINER  -->
-    <div class="container bg_yellow">
-        <div class="content text-green">
-            <img src="./img/03.png" alt="shoes">
-            <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+        <!-- 2° CONTAINER  -->
+        <div id="green" class="container bg_green">
+            <div class="content text-yellow">
+                <img src="./img/02.png" alt="shoes">
+                <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+            </div>
         </div>
-    </div>
+        <!-- 3° CONTAINER  -->
+        <div id="yellow" class="container bg_yellow">
+            <div class="content text-green">
+                <img src="./img/03.png" alt="shoes">
+                <h2>IL NOSTRO MODELLO DI PUNTA</h2>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
