[FIX] fixed img and menu

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- MAIN  -->
     <main>
         <div class="menu">
-            <span><a href="#red">1</a></span>
-            <span><a href="#green">2</a></span>
-            <span><a href="#yellow">3</a></span>
+            <a href="#red">1</a>
+            <a href="#green">2</a>
+            <a href="#yellow">3</a>
         </div>
         <!-- 1° CONTAINER  -->
         <div id="red" class="container bg_red">
